--- a/src/themes/_variables.scss
+++ b/src/themes/_variables.scss
@@ -50,7 +50,10 @@ $link-color:                $success !default;
 
 // Fonts
 
-$font-family-sans-serif:      "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+$font-family-courier:         source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+$webkit-font-smoothing:       antialiased;
+$moz-osx-font-smoothing:      grayscale;
 
 $font-size-base:              0.9375rem !default;
 
