React Redux Forms

--- a/src/components/header/header.hashed.scss
+++ b/src/components/header/header.hashed.scss
@@ -1,3 +1,11 @@
+:global(.header) {
+    background-color: #2a82dc;
+}
+
+.header {
+    font-size: 14px;
+}
+
 .header-component {
     button.btn.btn-outline-secondary {
         color: #ACACAC;
