--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,4 @@
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 @import './themes/typography';
 @import './themes/bootswatch';
+@import './themes/animations';
